--- a/www/index.html
+++ b/www/index.html
@@ -46,5 +46,6 @@
         </div>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
+        <script type="text/javascript" src="js/plugins/LaunchMyApp.js"></script>
     </body>
 </html>
